Heading anchor fix; Codeblock no-wrapping; dl-boxes

--- a/client/scss/components/_documentation.scss
+++ b/client/scss/components/_documentation.scss
@@ -8,6 +8,29 @@ $content-background: $white;
   padding: 0;
 }
 
+.dl-boxes {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 200%;
+  justify-content: space-around;
+  text-align: center;
+
+  > a {
+    background: #f2f2f3;
+    color: $c-black;
+    margin-bottom: 2rem;
+    max-width: 200px;
+    min-width: 150px;
+    padding: 20px 0;
+    transition: background 0.2s ease, color 0.2s ease;
+
+    &:hover {
+      color: $c-blue;
+      background: darken(#f2f2f3, 5%);
+    }
+  }
+}
+
 @media screen and #{breakpoint(small down)} {
   .background-for-medium {
     background-image: none !important;
